@@ -18,16 +18,9 @@
  */
 package org.apache.sling.caconfig.impl;
 
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertSame;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.verifyNoMoreInteractions;
-import static org.mockito.Mockito.when;
-
+import java.util.ArrayList;
 import java.util.Iterator;
+import java.util.List;
 
 import org.apache.sling.api.resource.Resource;
 import org.apache.sling.caconfig.spi.ConfigurationInheritanceStrategy;
@@ -41,7 +34,14 @@ import org.mockito.invocation.InvocationOnMock;
 import org.mockito.junit.MockitoJUnitRunner;
 import org.mockito.stubbing.Answer;
 
-import com.google.common.collect.ImmutableList;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertSame;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoMoreInteractions;
+import static org.mockito.Mockito.when;
 
 @RunWith(MockitoJUnitRunner.class)
 public class ConfigurationInheritanceStrategyMultiplexerImplTest {
@@ -51,6 +51,7 @@ public class ConfigurationInheritanceStrategyMultiplexerImplTest {
 
     @Mock
     private Resource resource1;
+
     @Mock
     private Resource resource2;
 
@@ -59,7 +60,7 @@ public class ConfigurationInheritanceStrategyMultiplexerImplTest {
 
     @Before
     public void setUp() {
-        resources = ImmutableList.of(resource1, resource2).iterator();
+        resources = new ArrayList<>(List.of(resource1, resource2)).iterator();
         underTest = context.registerInjectActivateService(new ConfigurationInheritanceStrategyMultiplexerImpl());
     }
 
@@ -73,7 +74,7 @@ public class ConfigurationInheritanceStrategyMultiplexerImplTest {
     public void testWithOneStrategy() {
         ConfigurationInheritanceStrategy strategy = mock(ConfigurationInheritanceStrategy.class);
 
-        when(strategy.getResource((Iterator<Resource>)any())).thenAnswer(new Answer<Resource>() {
+        when(strategy.getResource((Iterator<Resource>) any())).thenAnswer(new Answer<Resource>() {
             @Override
             public Resource answer(InvocationOnMock invocation) throws Throwable {
                 Iterator<Resource> items = invocation.getArgument(0);
@@ -93,7 +94,7 @@ public class ConfigurationInheritanceStrategyMultiplexerImplTest {
         ConfigurationInheritanceStrategy strategy2 = mock(ConfigurationInheritanceStrategy.class);
         ConfigurationInheritanceStrategy strategy3 = mock(ConfigurationInheritanceStrategy.class);
 
-        when(strategy1.getResource((Iterator<Resource>)any())).thenAnswer(new Answer<Resource>() {
+        when(strategy1.getResource((Iterator<Resource>) any())).thenAnswer(new Answer<Resource>() {
             @Override
             public Resource answer(InvocationOnMock invocation) throws Throwable {
                 Iterator<Resource> items = invocation.getArgument(0);
@@ -103,7 +104,7 @@ public class ConfigurationInheritanceStrategyMultiplexerImplTest {
                 return null;
             }
         });
-        when(strategy2.getResource((Iterator<Resource>)any())).thenAnswer(new Answer<Resource>() {
+        when(strategy2.getResource((Iterator<Resource>) any())).thenAnswer(new Answer<Resource>() {
             @Override
             public Resource answer(InvocationOnMock invocation) throws Throwable {
                 Iterator<Resource> items = invocation.getArgument(0);
@@ -117,9 +118,8 @@ public class ConfigurationInheritanceStrategyMultiplexerImplTest {
 
         assertSame(resource1, underTest.getResource(resources));
 
-        verify(strategy1, times(1)).getResource((Iterator<Resource>)any());
-        verify(strategy2, times(1)).getResource((Iterator<Resource>)any());
+        verify(strategy1, times(1)).getResource((Iterator<Resource>) any());
+        verify(strategy2, times(1)).getResource((Iterator<Resource>) any());
         verifyNoMoreInteractions(strategy3);
     }
-
 }
