@@ -18,20 +18,11 @@
  */
 package org.apache.sling.caconfig.impl.metadata;
 
-import static org.apache.sling.caconfig.impl.metadata.AnnotationClassParser.buildConfigurationMetadata;
-import static org.apache.sling.caconfig.impl.metadata.AnnotationClassParser.getConfigurationName;
-import static org.apache.sling.caconfig.impl.metadata.AnnotationClassParser.getPropertyName;
-import static org.apache.sling.caconfig.impl.metadata.AnnotationClassParser.isContextAwareConfig;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
-
 import java.util.Collection;
 import java.util.List;
+import java.util.Map;
 
-import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.Strings;
 import org.apache.sling.caconfig.example.AllTypesConfig;
 import org.apache.sling.caconfig.example.ListConfig;
 import org.apache.sling.caconfig.example.MetadataSimpleConfig;
@@ -42,8 +33,15 @@ import org.apache.sling.caconfig.spi.metadata.ConfigurationMetadata;
 import org.apache.sling.caconfig.spi.metadata.PropertyMetadata;
 import org.junit.Test;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
+import static org.apache.sling.caconfig.impl.metadata.AnnotationClassParser.buildConfigurationMetadata;
+import static org.apache.sling.caconfig.impl.metadata.AnnotationClassParser.getConfigurationName;
+import static org.apache.sling.caconfig.impl.metadata.AnnotationClassParser.getPropertyName;
+import static org.apache.sling.caconfig.impl.metadata.AnnotationClassParser.isContextAwareConfig;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.fail;
 
 public class AnnotationClassParserTest {
 
@@ -83,16 +81,17 @@ public class AnnotationClassParserTest {
         assertEquals("simpleConfig", metadata.getName());
         assertEquals("Simple configuration", metadata.getLabel());
         assertEquals("This is a configuration example with additional metadata.", metadata.getDescription());
-        assertEquals(ImmutableMap.of("param1", "value1", "param2", "123"), metadata.getProperties());
+        assertEquals(Map.of("param1", "value1", "param2", "123"), metadata.getProperties());
         assertFalse(metadata.isCollection());
 
-        List<PropertyMetadata<?>> propertyMetadataList = ImmutableList.copyOf(metadata.getPropertyMetadata().values());
+        List<PropertyMetadata<?>> propertyMetadataList =
+                List.copyOf(metadata.getPropertyMetadata().values());
         assertEquals(3, propertyMetadataList.size());
 
         PropertyMetadata<?> stringParam = propertyMetadataList.get(0);
         assertEquals("String Param", stringParam.getLabel());
         assertEquals("Enter strings here.", stringParam.getDescription());
-        assertEquals(ImmutableMap.of("p1", "v1"), stringParam.getProperties());
+        assertEquals(Map.of("p1", "v1"), stringParam.getProperties());
         assertNull(stringParam.getDefaultValue());
 
         PropertyMetadata<?> intParam = propertyMetadataList.get(1);
@@ -133,35 +132,34 @@ public class AnnotationClassParserTest {
 
         assertEquals(NestedConfig.class.getName(), metadata.getName());
 
-        Collection<PropertyMetadata<?>> propertyMetadataList = metadata.getPropertyMetadata().values();
+        Collection<PropertyMetadata<?>> propertyMetadataList =
+                metadata.getPropertyMetadata().values();
         assertEquals(4, propertyMetadataList.size());
 
         for (PropertyMetadata<?> propertyMetadata : propertyMetadataList) {
-            if (StringUtils.equals(propertyMetadata.getName(), "stringParam")) {
+            if (Strings.CS.equals(propertyMetadata.getName(), "stringParam")) {
                 assertEquals(String.class, propertyMetadata.getType());
-            }
-            else if (StringUtils.equals(propertyMetadata.getName(), "subConfig")) {
+            } else if (Strings.CS.equals(propertyMetadata.getName(), "subConfig")) {
                 assertEquals(ConfigurationMetadata.class, propertyMetadata.getType());
 
                 ConfigurationMetadata subConfigMetadata = propertyMetadata.getConfigurationMetadata();
                 assertEquals("subConfig", subConfigMetadata.getName());
                 assertEquals(3, subConfigMetadata.getPropertyMetadata().size());
-            }
-            else if (StringUtils.equals(propertyMetadata.getName(), "subListConfig")) {
+            } else if (Strings.CS.equals(propertyMetadata.getName(), "subListConfig")) {
                 assertEquals(ConfigurationMetadata[].class, propertyMetadata.getType());
 
                 ConfigurationMetadata subListConfigMetadata = propertyMetadata.getConfigurationMetadata();
                 assertEquals("subListConfig", subListConfigMetadata.getName());
                 assertEquals(2, subListConfigMetadata.getPropertyMetadata().size());
-            }
-            else if (StringUtils.equals(propertyMetadata.getName(), "subConfigWithoutAnnotation")) {
+            } else if (Strings.CS.equals(propertyMetadata.getName(), "subConfigWithoutAnnotation")) {
                 assertEquals(ConfigurationMetadata.class, propertyMetadata.getType());
 
                 ConfigurationMetadata subConfigWithoutAnnotationMetadata = propertyMetadata.getConfigurationMetadata();
                 assertEquals("subConfigWithoutAnnotation", subConfigWithoutAnnotationMetadata.getName());
-                assertEquals(1, subConfigWithoutAnnotationMetadata.getPropertyMetadata().size());
-            }
-            else {
+                assertEquals(
+                        1,
+                        subConfigWithoutAnnotationMetadata.getPropertyMetadata().size());
+            } else {
                 fail("Unexpected property name: " + propertyMetadata.getName());
             }
         }
@@ -171,5 +169,4 @@ public class AnnotationClassParserTest {
     public void testBuildConfigurationMetadata_IllegalClass() {
         buildConfigurationMetadata(WithoutAnnotationConfig.class);
     }
-
 }
