@@ -18,29 +18,20 @@
  */
 package org.apache.sling.caconfig.resource.impl.util;
 
-import static org.junit.Assert.assertEquals;
-
 import java.util.List;
 
+import org.apache.commons.collections4.IteratorUtils;
 import org.junit.Test;
 
-import com.google.common.collect.ImmutableList;
+import static org.junit.Assert.assertEquals;
 
 public class PathEliminateDuplicatesIteratorTest {
 
     @Test
     public void testIterator() {
-        List<String> paths = ImmutableList.of(
-                "/conf/a",
-                "/conf/a/b",
-                "/conf/a",
-                "/conf/a/b/c");
+        List<String> paths = List.of("/conf/a", "/conf/a/b", "/conf/a", "/conf/a/b/c");
 
-        List<String> result = ImmutableList.copyOf(new PathEliminateDuplicatesIterator(paths.iterator()));
-        assertEquals(ImmutableList.of(
-                "/conf/a",
-                "/conf/a/b",
-                "/conf/a/b/c"), result);
+        List<String> result = IteratorUtils.toList(new PathEliminateDuplicatesIterator(paths.iterator()));
+        assertEquals(List.of("/conf/a", "/conf/a/b", "/conf/a/b/c"), result);
     }
-
 }
